# MSR2025-log4shell-depend-analyze

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/msr2025/: __init__.py  rq1.py  rq2_1.py
src/msr2025/A_Data_Preparation_and_Extraction/: __init__.py  data_extraction.py  data_preparation.py  main.py  neo4jclient.py  utils.py
src/msr2025/A_Data_Preparation_and_Extraction/lib/: __init__.py  env.py  neo4jclient.py
src/msr2025/B-Empirical_Study/: rq2_2.py
src/msr2025/B_Empirical_Study/: __init__.py  generate_data.py  rq1.py  rq2_1.py  rq2_2.py
src/msr2025/B_Empirical_Study/lib/: __init__.py  constants.py  files.py  type.py
src/msr2025/lib/: __init__.py  envs.py  files.py  tasks.py
