[project]
name = "MSR2025"
version = "0.1.0"
description = "MSR2025"
readme = "README.md"
authors = [
    { name = "take0x" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.9.3",
    "neo4j>=5.28.1",
    "requests>=2.32.3",
]

[project.scripts]
data_preparation_and_extraction = "msr2025.A_Data_Preparation_and_Extraction.main:main"
generate = "msr2025.B_Empirical_Study.generate_data:main"
rq1 = "msr2025.B_Empirical_Study.rq1:main"
rq2_1 = "msr2025.B_Empirical_Study.rq2_1:main"
rq2_2 = "msr2025.B_Empirical_Study.rq2_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msr2025"]
